Add usage instructions to README.md