@@ -31,14 +31,22 @@ Features to include in later releases and things that should be improved:
 
 ## Requirements
 
-Notepad is built on Java 11 and JavaFX (actually open source version of both, ie. OpenJDK and OpenJFX).
+Notepad is built on Java 11 and JavaFX (actually open source version of both, i.e. OpenJDK and OpenJFX).
 
-You'll have to manually install JavaFX since it's no longer bundled with JDK.
-Also, if you'd like to make an executable you'll have to either do a "fat jar" (a jar with all dependencies included)
-or convert this into a modular project.
+You'll have to manually install JavaFX since it's no longer bundled with JDK. 
 
-I usually use a "fat jar" in combination with a simple script to load dependencies with the app itself.
-This is a temporary solution until the new version of Java Packager arrives. 
+## Usage
+
+As said before, you need OpenJDK 11 and OpenJFX SDK 11. Compile the source code and compress
+it into a .jar then run
+
+```bash
+java --module-path="path_to_your_openjfx_sdk" \
+    --add-modules=javafx.controls,javafx.base,javafx.fxml,javafx.graphics,javafx.web,javafx.swing,javafx.media \
+    -jar your_jar_file.jar
+```
+
+This is a temporary solution until the new version of Java Packager arrives.
 
 [licenseBadge]: https://img.shields.io/badge/license-MIT-blue.svg
 [versionBadge]: https://img.shields.io/badge/version-0.3-brightgreen.svg
